--- a/yamls/cmsms.yml
+++ b/yamls/cmsms.yml
@@ -127,6 +127,12 @@
 # CVE-2020-23240 TODO
 # CVE-2020-23241 TODO
 # CVE-2020-22732 TODO
+# CVE-2022-23906 TODO
+# CVE-2022-23907 TODO
+# CVE-2021-43741 TODO
+# CVE-2021-43742 TODO
+# CVE-2021-43154 TODO
+# CVE-2021-40961 TODO
 CMSMS:
   1:
     location: ['/version.php']
