--- a/yamls/centreon.yml
+++ b/yamls/centreon.yml
@@ -51,6 +51,7 @@
 # CVE-2019-17646 TODO
 # CVE-2019-17647 TODO
 # CVE-2020-9463 TODO
+# CVE-2022-39988 TODO
 Centreon:
   1:
     location: ['/CHANGELOG']
