--- a/yamls/clippercms.yml
+++ b/yamls/clippercms.yml
@@ -11,6 +11,8 @@
 # CVE-2018-13106 TODO fix not available 2018-11-12 https://github.com/ClipperCMS/ClipperCMS/issues/489
 # CVE-2018-19135 TODO fix not available 2018-11-12 https://github.com/ClipperCMS/ClipperCMS/issues/494
 # CVE-2018-19424 TODO
+# CVE-2022-41495 TODO
+# CVE-2022-41497 TODO
 ClipperCMS:
   1:
     location: ['/manager/includes/version.inc.php']
