--- a/yamls/mahara.yml
+++ b/yamls/mahara.yml
@@ -79,6 +79,11 @@
 # CVE-2021-43266 TODO
 # CVE-2022-24111 TODO
 # CVE-2022-24694 TODO
+# CVE-2022-28892 TODO
+# CVE-2022-29584 TODO
+# CVE-2022-29585 TODO
+# CVE-2022-42707 TODO
+# CVE-2022-44544 TODO
 Mahara:
   1:
     location: ['/htdocs/lib/version.php']
