--- a/yamls/mantisbt.yml
+++ b/yamls/mantisbt.yml
@@ -1,3 +1,5 @@
+# Plugins:
+#   - CVE-2017-6958 https://www.openwall.com/lists/oss-security/2017/03/17/2
 # CVE-2011-2938
 # CVE-2011-3356
 # CVE-2011-3357
