--- a/yamls/mybb.yml
+++ b/yamls/mybb.yml
@@ -93,6 +93,11 @@
 # CVE-2021-41866 TODO
 # CVE-2021-43281 TODO
 # CVE-2022-24734 TODO
+# CVE-2022-39265 TODO
+# CVE-2022-43707 TODO
+# CVE-2022-43708 TODO
+# CVE-2022-43709 TODO
+# CVE-2022-45867 TODO
 MyBB:
   1:
     location: ['/inc/class_core.php']
