--- a/yamls/opencart.yml
+++ b/yamls/opencart.yml
@@ -24,7 +24,9 @@
 # CVE-2020-28838 N/A 3.0.3.6 is affected https://www.exploit-db.com/exploits/49228
 # CVE-2020-29470
 # CVE-2020-29471
+# CVE-2021-37823
 # CVE-2022-24108 plugin
+# CVE-2022-41403 plugin
 OpenCart:
   1:
     location: ['/admin/index.php']
