--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2708,12 +2708,13 @@ WordPress plugin wechat-broadcast:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-16283 https://lists.openwall.net/full-disclosure/2018/09/21/1 https://github.com/springjk/wordpress-wechat-broadcast/issues/14'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2018-19207 1.4.3 https://www.wordfence.com/blog/2018/11/trends-following-vulnerability-in-wp-gdpr-compliance-plugin/
 WordPress plugin wp-gdpr-compliance:
   1:
     location: ['/wp-content/plugins/wp-gdpr-compliance/readme.txt']
-    secure_version: '1.4.3'
+    secure_version: '2.0.23'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-19207 https://www.wordfence.com/blog/2018/11/trends-following-vulnerability-in-wp-gdpr-compliance-plugin/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-6700 https://www.wordfence.com/blog/2024/02/1900-bounty-awarded-for-arbitrary-options-update-vulnerability-patched-in-cookie-information-free-gdpr-consent-solution-wordpress-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin deans-fckeditor-with-pwwangs-code-plugin-for-wordpress:
