--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3008,12 +3008,15 @@ WordPress plugin themegrill-demo-importer:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-36334 https://www.webarxsecurity.com/critical-issue-in-themegrill-demo-importer/ https://www.openwall.com/lists/oss-security/2020/02/19/1'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2020-10195 3.64.1 https://www.wordfence.com/blog/2020/03/vulnerabilities-patched-in-popup-builder-plugin-affecting-over-100000-sites/ https://threatpost.com/wordpress-plugin-bug-popup-builder/153715/
+# CVE-2020-10196 3.64.1 https://www.wordfence.com/blog/2020/03/vulnerabilities-patched-in-popup-builder-plugin-affecting-over-100000-sites/ https://threatpost.com/wordpress-plugin-bug-popup-builder/153715/
+# CVE-2023-6000 4.2.3
 WordPress plugin popup-builder:
   1:
     location: ['/wp-content/plugins/popup-builder/readme.txt']
-    secure_version: '3.64.1'
+    secure_version: '4.2.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-10195 https://nvd.nist.gov/vuln/detail/CVE-2020-10196 https://www.wordfence.com/blog/2020/03/vulnerabilities-patched-in-popup-builder-plugin-affecting-over-100000-sites/ https://threatpost.com/wordpress-plugin-bug-popup-builder/153715/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-6000'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin users-customers-import-export-for-wp-woocommerce:
