--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3034,12 +3034,13 @@ WordPress plugin users-customers-import-export-for-wp-woocommerce:
 # CVE-2020-9456 4.6.0.4 https://www.wordfence.com/blog/2020/03/multiple-vulnerabilities-patched-in-registrationmagic-plugin/
 # CVE-2020-9457 4.6.0.4 https://www.wordfence.com/blog/2020/03/multiple-vulnerabilities-patched-in-registrationmagic-plugin/
 # CVE-2020-9458 4.6.0.4 https://www.wordfence.com/blog/2020/03/multiple-vulnerabilities-patched-in-registrationmagic-plugin/
+# CVE-2021-4073 5.0.1.8 https://www.wordfence.com/blog/2021/12/authentication-bypass-vulnerability-patched-in-user-registration-plugin/
 WordPress plugin custom-registration-form-builder-with-submission-manager:
   1:
     location: ['/wp-content/plugins/custom-registration-form-builder-with-submission-manager/readme.txt']
-    secure_version: '5.0.1.8'
+    secure_version: '5.3.1.0'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-4073 https://www.wordfence.com/blog/2021/12/authentication-bypass-vulnerability-patched-in-user-registration-plugin/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2024-1991 https://www.wordfence.com/blog/2024/03/1313-bounty-awarded-for-privilege-escalation-vulnerability-patched-in-registrationmagic-wordpress-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin responsive-add-ons:
